added more functionality and responsiveness

--- a/inedex.html
+++ b/inedex.html
@@ -15,67 +15,174 @@
       <nav>
         <div class="logo">
           <i class="fa-brands fa-slack"></i>
+          <p>HikmaSpark</p>
         </div>
         <ul class="nav-links">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><i class="fa-solid fa-house"></i><a href="#home">Home</a></li>
+          <li><i class="fa-solid fa-address-card"></i><a href="#about">About</a></li>
+          <li><i class="fa-solid fa-code"></i><a href="#services">Services</a></li>
+          <li><i class="fa-solid fa-phone"></i><a href="#contact">Contact</a></li>
         </ul>
+        <div class="menu-btn">
+          <i class="fas fa-bars"></i>
+      </div>
       </nav>
     </header>
 
     <!-- Home section -->
-    <section class="home" id="home">
+    
+    <section class="home">
       <div class="max-width">
         <div class="content">
-          <h2>Welcome to Our Website</h2>
+          <h2>Welcome to <span class="heading">hikmaSpark</span></h2>
           <p>
-            This is the home section. You can add your content and background
-            image here.
+            At HikmaSpark, we're dedicated to driving innovation and helping businesses thrive in the digital age. 
+              💻 With a focus on cutting-edge technology and unparalleled expertise, 
+              we craft bespoke software solutions tailored to meet the unique needs of our clients.
+              <br><br>
+              🌟Transforming Businesses with Smart Software Solutions | Simplifying Success for Clients | Let's Elevate Your Business Together 🚀
           </p>
         </div>
       </div>
     </section>
 
     <!-- About section -->
-    <section class="about" id="about">
+    
+    <section class="about">
       <div class="max-width">
-        <div class="content">
-          <h2>About Us</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-            consequuntur tempore, iusto eligendi velit tenetur sunt voluptatem
-            adipisci consequatur ad aliquam quos voluptatum incidunt dolores
-            accusantium aut ex veritatis nulla.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-            consequuntur tempore, iusto eligendi velit tenetur sunt voluptatem
-            adipisci consequatur ad aliquam quos voluptatum incidunt dolores
-            accusantium aut ex veritatis nulla.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-            consequuntur tempore, iusto eligendi velit tenetur sunt voluptatem
-            adipisci consequatur ad aliquam quos voluptatum incidunt dolores
-            accusantium aut ex veritatis nulla.
-          </p>
-        </div>
+          <h2 class="title">About Us</h2>
+          <div class="about-content">
+              <div class="column left">
+                  <img src="images/hikmaspark.jpeg" alt="">
+              </div>
+              <div class="column right">
+                  <p>🚀 Welcome to HikmaSpark 🌟 <br> At HikmaSpark, we're dedicated to driving innovation and helping businesses thrive in the digital age. 
+                    💻 With a focus on cutting-edge technology and unparalleled expertise, we craft bespoke software solutions tailored to meet the unique needs of our clients.
+                    🛠️ Our team of skilled developers, designers, and strategists collaborates closely with clients to deliver solutions that streamline processes, 
+                    enhance efficiency, and drive growth. From custom software development and mobile app solutions to cloud-based platforms and AI-driven applications, 
+                    we leverage the latest tools and techniques to bring your vision to life.
+                    🌟 What sets us apart is our commitment to excellence and customer satisfaction. We prioritize transparency, communication, and collaboration throughout every project, 
+                    ensuring that our clients are involved every step of the way. Our goal is not just to meet expectations but to exceed them, delivering results that make a tangible 
+                    impact on your business success.
+                   🌟Transforming Businesses with Smart Software Solutions | Simplifying Success for Clients | Let's Elevate Your Business Together 🚀</p>
+                  <a href="#">Contact Us</a>
+              </div>
+          </div>
       </div>
-    </section>
+  </section>
+    <!-- Services section -->
+    <section class="services">
+      <div class="max-width">
+          <h2 class="title">Our Services</h2>
+          <div class="serv-content">
+              <div class="card">
+                  <div class="box">
+                      <i class="fas fa-paint-brush"></i>
+                      <div class="text">Creative Content</div>
+                      <p>From captivating visuals to compelling copywriting, we know how to grab attention and keep it. 
+                        Whether it's social media posts, blog articles, or email newsletters, our creative 
+                        content is designed to engage your audience and leave a lasting impression. </p>
+                  </div>
+              </div>
+              <div class="card">
+                  <div class="box">
+                      <i class="fas fa-chart-line"></i>
+                      <div class="text">Multi-Channel Marketing</div>
+                      <p>We understand that different audiences hang out in different places. That's why we leverage a 
+                        variety of channels 
+                        from social media and email marketing to SEO and paid advertising to ensure maximum reach and 
+                        exposure for your brand.
+                        <br><br>
+                      </p>
+                  </div>
+              </div>
+              <div class="card">
+                  <div class="box">
+                      <i class="fas fa-code"></i>
+                      <div class="text">Data-Driven Insights</div>
+                      <p>We don't just rely on guesswork; we let the hashtag#data do the talking. With hashtag#advanced 
+                        analytics and tracking tools, 
+                        we continuously monitor and optimize our reach strategies to ensure they're delivering the best 
+                        possible results for your business.</p>
+                  </div>
+              </div>
+          </div>
+      </div>
+      </div>
+  </section>
 
     <!-- Contact section -->
-    <section class="contact" id="contact">
-        <div class="max-width">
-          <div class="content">
-            <h2>Contact Us</h2>
-            <p>
-              This is the contact section. You can add contact information or a
-              contact form here.
-            </p>
-            <ul>
-              <li>Email: example@example.com</li>
-              <li>Phone: +1 123-456-7890</li>
-              <li>Address: 123 Main Street, City, Country</li>
-            </ul>
+    <section class="contact">
+      <div class="max-width">
+          <h2 class="title">Contact Us</h2>
+          <div class="contact-content">
+              <div class="column left">
+                  <div class="text">Get in Touch</div>
+                  <p>
+                    <b>Transforming Businesses with Smart Software Solutions | Simplifying Success for Clients 
+                      | Let's Elevate Your Business Together</b><br><br>
+                    What sets us apart is our commitment to excellence and customer satisfaction. 
+                    We prioritize transparency, communication, and collaboration throughout every project, 
+                    ensuring that our clients are involved every step of the way. Our goal is not just to 
+                    meet expectations but to exceed them, delivering results that make a tangible impact on 
+                    your business success.
+                    Thank you for your continued trust and support.
+                  </p>
+                  <div class="icons">
+                      <div class="row">
+                          <i class="fas fa-user"></i>
+                          <div class="info">
+                              <div class="head">Company</div>
+                              <div class="sub-title">HikmaSpark pvt. ltd.</div>
+                          </div>
+                      </div>
+                      <div class="row">
+                          <i class="fas fa-map-marker-alt"></i>
+                          <div class="info">
+                              <div class="head">Address</div>
+                              <div class="sub-title">Indor Madhypardesh, India</div>
+                          </div>
+                      </div>
+                      <div class="row">
+                          <i class="fas fa-envelope"></i>
+                          <div class="info">
+                              <div class="head">Email</div>
+                              <div class="sub-title">contact@hikmaspark.com</div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="column right">
+                  <div class="text">Message me</div>
+                  <form action="#" method="POST">
+                      <div class="fields">
+                          <div class="field name">
+                              <input type="text" name="name" id="name" placeholder="Name" required>
+                          </div>
+                          <div class="field email">
+                              <input type="email" name="email" id="email" placeholder="Email" required>
+                          </div>
+                      </div>
+                      <div class="field">
+                          <input type="text" name="subject" id="subject" placeholder="Subject" required>
+                      </div>
+                      <div class="field textarea">
+                          <textarea cols="30" rows="10" name="Message" id="Message" placeholder="Message.."
+                              required></textarea>
+                      </div>
+                      <div class="button-area">
+                          <button type="submit">Send message</button>
+                      </div>
+                  </form>
+              </div>
+
+
           </div>
-        </div>
-      </section>
+      </div>
+  </section>
+      <!-- footer section start -->
+    <footer>
+      <span>Created By <a>HikmaSpark</a> | <span class="far fa-copyright"></span> 2024 All rights reserved.</span>
+    </footer>
   </body>
 </html>
